# Crop_Model_Multi_Stages

./: README.md  pyproject.toml  setup.py
examples/: basic_usage.py  custom_stages.py  maize_simulation.py  multi_stage_demo.py  yield_analysis.py
src/crop_model_multi_stages/: __init__.py  core.py  parameters.py  phenology.py
